# markitdown

./: .dockerignore  Dockerfile.render  main.py  pyproject.toml  render.yaml
