[project]
name = "markitdown-fastapi"
version = "0.1.0"
description = "HTTP API backed by the Marouane MarkItDown fork"
requires-python = "==3.12.*"

dependencies = [
    "fastapi[standard]",
    "python-multipart",
    "markitdown[pdf,docx,pptx,xlsx,xls,outlook]",
]

[tool.uv.sources]
markitdown = {
    git = "https://github.com/marouanecarmed/markitdown.git",
    branch = "main",
    subdirectory = "packages/markitdown"
}

[tool.fastapi]
entrypoint = "main:app"