[project]
name = "markitdown-fastapi"
version = "0.1.0"
description = "HTTP API backed by the Marouane MarkItDown fork"
requires-python = "==3.12.*"

dependencies = [
    "fastapi[standard]",
    "python-multipart",
    "openai",
    "markitdown-ocr",
    "markitdown[pdf,doc,docx,pptx,xlsx,xls,outlook]",
]

[tool.uv.sources]
markitdown = { git = "https://github.com/marouanecarmed/markitdown.git", branch = "main", subdirectory = "packages/markitdown" }
markitdown-ocr = { git = "https://github.com/marouanecarmed/markitdown.git", branch = "main", subdirectory = "packages/markitdown-ocr" }

[tool.fastapi]
entrypoint = "main:app"